# minisketch

./: .cirrus.yml  .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  libminisketch.pc.in  sources.mk
ci/: cirrus.sh
doc/: gen_params.sage  math.md  protocoltips.md
include/: minisketch.h
src/: Makefile  false_positives.h  fielddefines.h  int_utils.h  lintrans.h  minisketch.cpp  sketch.h  sketch_impl.h  test-exhaust.cpp  test.cpp  util.h
src/fields/: clmul_1byte.cpp  clmul_2bytes.cpp  clmul_3bytes.cpp  clmul_4bytes.cpp  clmul_5bytes.cpp  clmul_6bytes.cpp  clmul_7bytes.cpp  clmul_8bytes.cpp  clmul_common_impl.h  generic_1byte.cpp  generic_2bytes.cpp  generic_3bytes.cpp  generic_4bytes.cpp  generic_5bytes.cpp  generic_6bytes.cpp  generic_7bytes.cpp  generic_8bytes.cpp  generic_common_impl.h  small.cpp
tests/: pyminisketch.py
